--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,5 @@
+@import 'tailwindcss';
+
 body {
   width: 420px;
   height: calc(600px - 4rem);
@@ -5,26 +7,17 @@ body {
   padding: 2rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
-  background: lightgray;
 }
 
-header nav {
-  display: flex;
-  justify-content: space-around;
+.router-link-exact-active {
+  border-color: var(--color-blue-500);
 }
 
-header nav a {
-  padding: 0.8rem 1.4rem;
-  background: #333;
-  border-radius: 1rem;
-  font-size: 2rem;
-  color: lightgray;
-  text-decoration: none;
+.c-toast-container {
+  font-size: 0.8rem;
+  margin-bottom: 0.8rem;
 }
 
-header nav a:hover,
-.router-link-active {
-  background: #666;
-  color: black;
-  box-shadow: 5px 5px 10px #666
+.c-toast {
+  border-radius: 0.5rem !important;
 }
