--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,23 +1,23 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 body {
-  width: 420px;
-  height: calc(600px - 4rem);
-  margin: 0;
-  padding: 2rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
+    width: 420px;
+    height: calc(600px - 4rem);
+    margin: 0;
+    padding: 2rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
 }
 
 .router-link-exact-active {
-  border-color: var(--color-blue-500);
+    border-color: var(--color-blue-500);
 }
 
 .c-toast-container {
-  font-size: 0.8rem;
-  margin-bottom: 0.8rem;
+    font-size: 0.8rem;
+    margin-bottom: 0.8rem;
 }
 
 .c-toast {
-  border-radius: 0.5rem !important;
+    border-radius: 0.5rem !important;
 }
